--- a/pom.xml
+++ b/pom.xml
@@ -90,12 +90,12 @@
             <version>1.7.32</version>
         </dependency>
         <!-- BStats Integration -->
-        <dependency>
-            <groupId>org.bstats</groupId>
-            <artifactId>bstats-bukkit</artifactId>
-            <version>2.2.1</version>
-            <scope>compile</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.bstats</groupId>-->
+<!--            <artifactId>bstats-bukkit</artifactId>-->
+<!--            <version>2.2.1</version>-->
+<!--            <scope>compile</scope>-->
+<!--        </dependency>-->
 
         <!-- placeholder API integration -->
         <dependency>
@@ -103,6 +103,33 @@
             <artifactId>placeholderapi</artifactId>
             <version>2.10.10</version>
             <scope>provided</scope>
+        </dependency>
+
+        <!-- testing framework (not included in jar) -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.12.4</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.seeseemelk</groupId>
+            <artifactId>MockBukkit-v1.16</artifactId>
+            <version>1.5.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.konghq</groupId>
+            <artifactId>unirest-java</artifactId>
+            <version>3.12.0</version>
+            <classifier>standalone</classifier>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -158,13 +185,13 @@
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.2.4</version>
                 <configuration>
-                    <relocations>
-                        <relocation>
-                            <pattern>org.bstats</pattern>
-                            <!-- Replace this with your package! -->
-                            <shadedPattern>io.servertap</shadedPattern>
-                        </relocation>
-                    </relocations>
+<!--                    <relocations>-->
+<!--                        <relocation>-->
+<!--                            <pattern>org.bstats</pattern>-->
+<!--                            &lt;!&ndash; Replace this with your package! &ndash;&gt;-->
+<!--                            <shadedPattern>io.servertap</shadedPattern>-->
+<!--                        </relocation>-->
+<!--                    </relocations>-->
 
                     <createDependencyReducedPom>false</createDependencyReducedPom>
                 </configuration>
@@ -176,6 +203,18 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <!-- Plugin for Unit Tests -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+
+                <configuration>
+                    <junitArtifactName>org.junit.jupiter:junit-jupiter</junitArtifactName>
+                    <trimStackTrace>false</trimStackTrace>
+                </configuration>
             </plugin>
         </plugins>
     </build>
